// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should match snapshot with label 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
  testID="divider-test-id"
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#9E9E9E",
        "height": 1,
      }
    }
  />
  <Text
    style={
      Object {
        "backgroundColor": "#fff",
        "borderColor": "#9E9E9E",
        "borderRadius": 5,
        "borderWidth": 1,
        "color": "#9E9E9E",
        "padding": 4,
        "position": "absolute",
        "textAlign": "center",
        "textTransform": "uppercase",
        "zIndex": 2,
      }
    }
  >
    OR
  </Text>
</View>
`;

exports[`Divider should match snapshot without label 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
  testID="divider-test-id"
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#9E9E9E",
        "height": 1,
      }
    }
  />
</View>
`;
